import { Stack, useLocalSearchParams } from "expo-router";
import React from "react";
import { ScrollView } from "react-native";

import ListWithFilters from "@/components/ListWithFilters";
import { ProjectCard, ProjectCardSkeleton } from "@/components/Project/project-card";
import { GlobalProjectsUIFilters } from "@/constants/UIFilters";
import { useGitLab } from "@/lib/gitlab/future/hooks/useGitlab";
import GitLabClient from "@/lib/gitlab/gitlab-api-wrapper";
import { useSession } from "@/lib/session/SessionProvider";
import { extractDefaultFilters, extractDefaultUIOptions } from "@/lib/utils";

...
        projectId: "id",
    }

    const getScreenTitle = () => {
        if (localParams.owned === "true") return "🏠 My Projects";
        if (localParams.starred === "true") return "⭐ Starred Projects";
        return "📁 Projects";
    };
    console.log("localParams", localParams);

    return (
        <ScrollView
            className="flex-1 p-2 bg-background"
...
