...
            <SelectTrigger className='web:flex h-10 native:h-12 web:w-full rounded-md border border-input bg-background px-3 web:py-2 text-base lg:text-sm native:text-lg native:leading-[1.25] text-foreground placeholder:text-muted-foreground web:ring-offset-background file:border-0 file:bg-transparent file:font-medium web:focus-visible:outline-none web:focus-visible:ring-2 web:focus-visible:ring-r
                {/* <SelectValue
                    className='text-sm text-foreground native:text-lg'
                    placeholder='Select a fruit'
                /> */}
                {/* <Text className="ml-2 text-right text-white">
                    {placeholder ? placeholder : "SELECT BRANCH"}
                </Text> */}
                <SelectValue
                    className='text-sm text-foreground native:text-lg'
                    placeholder={placeholder || "SELECT BRANCH"}>
                    <Text className="ml-2 font-bold text-right text-white">
                        {selectedBranch}
...
                </SelectValue>
            </SelectTrigger>
            <SelectContent insets={contentInsets} className='w-[250px]  mt-1 font-bold '>
                <SelectGroup>
                    <ScrollView className='max-h-64'>
                        <SelectLabel>
                            Branches name
                            {/* <View className="flex-row items-center">
                            <Ionicons name="search" size={20} color="#000" />
                            <Input
                                className="w-full h-10 ml-2"
                                placeholder="Branches..."
                                value={value}
...
