...
        <View
            className="flex-1 p-2 bg-background"
            contentContainerStyle={{ paddingBottom: 100 }} // Add extra padding at the bottom
        >
            <Stack.Screen
                options={{
                    headerTitle: "Issues for Project",
                }}
            />
            <ListWithFilters
                UIFilters={UIFilters}
                itemId={projectId}
                queryFn={api.useProjectIssues}
...
