...
          }}
        />

        <Tabs.Screen
          name="profile"
          options={{
            title: 'Profile',
            tabBarIcon: ({ color }) => <TabBarIcon name="person" color={color} />,
            headerRight: () => (
              <View className='flex-row items-center'>
                <Link
                  href="/share/profile"
                  className='pl-2 pr-2 m-2'
...
