appId: com.thomas.pedot.expogitlabclient
---
- tapOn: "Projects"
- assertVisible: "📁 Projects"
- takeScreenshot: ./assets/maestro/Projects
- copyTextFrom:
    id: "project-card"
    index: 0
- tapOn:
    id: "project-card"
    index: 0
- assertVisible: ${maestro.copiedText}
- takeScreenshot: ./assets/maestro/Project Details
- tapOn: "Issues"
- assertVisible: "Issues for Project"
- takeScreenshot: ./assets/maestro/Project Issues
- back
- tapOn: "Merge Requests"
- assertVisible: "Merge Requests for Project"
- takeScreenshot: ./assets/maestro/ProjectMergeRequests
- back
- tapOn: More
- takeScreenshot: ./assets/maestro/ProjectMergeRequestsWithMore
- assertVisible: "Members"
- assertVisible: "Starred"
- tapOn: Members
- takeScreenshot: ./assets/maestro/ProjectMergeRequestsMembers
- back
- tapOn: SELECT BRANCH
- assertVisible: "Branches name"
- takeScreenshot: ./assets/maestro/ProjectMergeRequestsSelectBranch
- back
- back
- back
